@@ -1,3 +1,7 @@
+2014-12-14 19:45 +0000
+- added jeuxvideocom
+
+
 2014-12-08 21:00 +0000
 - twitch: added rudimentary /v/ url support
 - twitch: added fallback for /v/ url when /b/ is available as referrer
